Make CC 8.0 compatible